# jrag

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  prod-release.yml  test-publish.yml  tests_publish.yml
jrag/: __init__.py
notebooks/: jrag-colab.ipynb
tests/: test_jrag.py
